--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -8,7 +8,7 @@
 
 img.deliveryman-icon {
   width: auto;
-  height: 200px;
+  height: 180px;
 }
 
 .deliveryman {
@@ -19,9 +19,8 @@ img.deliveryman-icon {
 }
 
 .login-card {
-  height: fit-content;
-  max-height: fit-content;
-  margin-top: 40%;
+  margin-top: 25%;
+  width: 400px;
 }
 
 .waves {
