--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -2,12 +2,11 @@
   height: 100%;
 }
 
-img.deliveryman-icon {
+img.food-icon {
   width: auto;
-  max-height: 350px;
 }
 
-.deliveryman {
+.food {
   width: 100%;
   height: 100%;
   display: flex;
