--- a/src/pages/menu/Menu.css
+++ b/src/pages/menu/Menu.css
@@ -1,3 +1,18 @@
+.card-item {
+  display: flex;
+  justify-content: center;
+}
+
 div.menu-container {
   height: 100%;
+}
+
+@media (max-width: 360px) {
+  .columns {
+    max-width: 360px;
+  }
+
+  .card-item {
+    margin-left: 5%;
+  }
 }
