--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -19,10 +19,10 @@ img.food-icon {
 }
 
 .login-card {
-  margin: 2.5%;
+  margin: 5% 10px 0px 10px;
   width: 100%;
   height: 100%;
-  max-height: 560px;
+  max-height: 540px;
   display: flex;
   justify-content: center;
   align-items: center;
