Simple refactor on Menu page

--- a/src/pages/menu/Menu.css
+++ b/src/pages/menu/Menu.css
@@ -16,3 +16,9 @@ div.menu-container {
     margin-left: 5%;
   }
 }
+
+@media (max-width: 768px) {
+  .menu-title {
+    text-align: center;
+  }
+}
