--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,8 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css";
 
 html,
-body {
+body,
+#root {
   background-color: #ffffff;
   height: 100%;
   margin: 0;
